maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: not found: type int
    var x :int=random3()
           ^