maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    var x :int=random3()
    if (x==0){
      avance()
    }
    else if (x==1){
      droite();avance()
    }
    else {
      gauche();avance()
    }
  }
  prendBiscuit()
}